--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -139,7 +139,7 @@ div.nl-section.nl-create-team.homepage-field
 											td.pos DEF
 											td 30
 											td $0
-			div.col-12.col-lg-8.offset-lg-2
+			div.col-12.col-lg-12.col-xl-10.offset-xl-1
 				div.nl-team-info
 					div.nl-team-data
 						div.row 
