--- a/markup/_layouts/_content/_homepage/top5-manager-soccer.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager-soccer.jade
@@ -38,25 +38,25 @@ div.row
     button.mobile-menu.dropdown(type='button', data-toggle='modal', data-target='#weekModal') Choose Week
     div.mobile-menu(data-toggle="tab" href="#manager1" role="tab")
         div.number
-            p 1
+            p.rank-manager-top5 1
         p MattRyan1
 div.row
     div.mobile-menu(data-toggle="tab" href="#manager2" role="tab")
         div.number
-            p 1
+            p.rank-manager-top5 2
         p MattRyan2
     div.mobile-menu(data-toggle="tab" href="#manager3" role="tab")
         div.number
-            p 1
+            p.rank-manager-top5 3
         p MattRyan3
 div.row
     div.mobile-menu(data-toggle="tab" href="#manager4" role="tab")
         div.number
-            p 1
+            p.rank-manager-top5 4
         p MattRyan4
     div.mobile-menu(data-toggle="tab" href="#manager5" role="tab")
         div.number
-            p 1
+            p.rank-manager-top5 5
         p MattRyan5 
 
 div.tab-content(id="top5-manager-content")
