--- a/markup/_layouts/_content/_homepage/top5-player-soccer.jade
+++ b/markup/_layouts/_content/_homepage/top5-player-soccer.jade
@@ -43,25 +43,25 @@ div.row
 	button.mobile-menu.dropdown(type='button', data-toggle='modal', data-target='#playerModal') Choose Positions
 	div.mobile-menu(data-toggle="tab" href="#player1" role="tab")
 		div.number
-			p 1
+			p.rank-player-top5 1 
 		p MattRyan1
 div.row
 	div.mobile-menu(data-toggle="tab" href="#player2" role="tab")
 		div.number
-			p 1
+			p.rank-player-top5 2
 		p MattRyan2
 	div.mobile-menu(data-toggle="tab" href="#player3" role="tab")
 		div.number
-			p 1
+			p.rank-player-top5 3
 		p MattRyan3
 div.row
 	div.mobile-menu(data-toggle="tab" href="#player4" role="tab")
 		div.number
-			p 1
+			p.rank-player-top5 4
 		p MattRyan4
 	div.mobile-menu(data-toggle="tab" href="#player5" role="tab")
 		div.number
-			p 1
+			p.rank-player-top5 5
 		p MattRyan5	
 
 div.tab-content(id="top5-player-content")
