--- a/markup/_layouts/_content/_homepage/upcoming_contest.jade
+++ b/markup/_layouts/_content/_homepage/upcoming_contest.jade
@@ -17,7 +17,7 @@ div.row
                     a.nav-link(data-toggle="tab" href="#f" role="tab") My&nbsp;contests
 
 
-            div.tab-content
+            div.tab-content.rounded-corners
                 div.tab-pane.active(id="all" role="tabpanel")
                     div.nl-table-responsive
                         div.nl-table-mw.homepage-contest-content
