--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -78,6 +78,16 @@
 
 .nl-section.homepage {
 
+  .rounded-corners {
+    border-top-left-radius:  0.625rem;
+    border-top-right-radius: 0.625rem;
+    border-bottom-left-radius: 0.625rem;;
+    border-bottom-right-radius: 0.625rem;;
+    // overflow: hidden;
+    -webkit-box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+    box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+  }
+
   .btn-primary {
     font-weight: 600;
   }
@@ -301,7 +311,7 @@
   }
 
   .nl-contests-table .tab-content {
-    border-radius: 0;
+    //border-radius: 0;
     border-bottom-right-radius: 0.625rem;
     border-bottom-left-radius: 0.625rem;
   }
@@ -1533,6 +1543,12 @@
   p {
     display: inline-block;
     padding: 8px 0 0 15px;
+
+    &.rank-manager-top5, &.rank-player-top5 {
+      padding-top: 10px;
+      font-size: 18px;
+      font-weight: 600;
+    }
   }
 
   &.dropdown {
@@ -1541,6 +1557,8 @@
     padding-top: 3px;
     box-shadow: none;
     border: none;
+    font-weight: 600;
+    font-size: 12px;
 
     i {
       float: right;
