--- a/markup/_scss/sections/_nl-my-teams.scss
+++ b/markup/_scss/sections/_nl-my-teams.scss
@@ -19,7 +19,7 @@
   }
 
   .nl-status-wrapper span.played {
-    background: #6dcff6;
+    background: #5fadcc;
   }
 
   .nl-status-wrapper span.not-playing {
@@ -311,7 +311,7 @@
     background-color: #2b9c53;
   }
   .played{
-    background-color: #6dcff6;
+    background-color: #5fadcc;
   }
   .not-playing{
     background-color: #e01516;
