--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -12180,7 +12180,7 @@ td:nth-child(4).homepage-list-view {
   .nl-my-teams .nl-status-wrapper span.playing {
     background: green; }
   .nl-my-teams .nl-status-wrapper span.played {
-    background: #6dcff6; }
+    background: #5fadcc; }
   .nl-my-teams .nl-status-wrapper span.not-playing {
     background: red; }
   .nl-my-teams .helmet {
@@ -12385,7 +12385,7 @@ td:nth-child(4).homepage-list-view {
   background-color: #2b9c53; }
 
 .table .played {
-  background-color: #6dcff6; }
+  background-color: #5fadcc; }
 
 .table .not-playing {
   background-color: #e01516; }
@@ -13603,9 +13603,25 @@ td:nth-child(4).homepage-list-view {
   height: 100%;
   min-height: 563px;
   position: relative; }
-  .nl-enter-contests .player-main-block .nl-GK-position {
-    bottom: 3.5%;
-    left: 43%; }
+  @media (min-width: 1681px) {
+    .nl-enter-contests .player-main-block .nl-GK-position {
+      bottom: 8.5%;
+      left: 45%; } }
+  @media only screen and (min-width: 1441px) and (max-width: 1680px) {
+    .nl-enter-contests .player-main-block .nl-GK-position {
+      bottom: 9.5%;
+      left: 44%; } }
+  @media only screen and (min-width: 1201px) and (max-width: 1500px) {
+    .nl-enter-contests .player-main-block .nl-GK-position {
+      bottom: 9.5%;
+      left: 43%; } }
+  @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+    .nl-enter-contests .player-main-block .nl-GK-position {
+      left: 43%; } }
+  @media only screen and (min-width: 992px) and (max-width: 1200px) {
+    .nl-enter-contests .player-main-block .nl-GK-position {
+      left: 40%;
+      bottom: 4.5%; } }
   .nl-enter-contests .player-main-block .nl-DL-position {
     bottom: 30.5%;
     left: 15%; }
@@ -13615,18 +13631,52 @@ td:nth-child(4).homepage-list-view {
   .nl-enter-contests .player-main-block .nl-FLEXL-position {
     bottom: -2%;
     left: 2%; }
-  .nl-enter-contests .player-main-block .nl-DM-position {
-    bottom: 30%;
-    right: 40%; }
+  @media (min-width: 1681px) {
+    .nl-enter-contests .player-main-block .nl-DM-position {
+      bottom: 32%;
+      right: 43%; } }
+  @media only screen and (min-width: 1441px) and (max-width: 1680px) {
+    .nl-enter-contests .player-main-block .nl-DM-position {
+      bottom: 33%;
+      right: 43%; } }
+  @media only screen and (min-width: 1201px) and (max-width: 1500px) {
+    .nl-enter-contests .player-main-block .nl-DM-position {
+      bottom: 33%;
+      right: 43%; } }
+  @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+    .nl-enter-contests .player-main-block .nl-DM-position {
+      bottom: 33%;
+      right: 41%; } }
+  @media only screen and (min-width: 992px) and (max-width: 1200px) {
+    .nl-enter-contests .player-main-block .nl-DM-position {
+      bottom: 33%;
+      right: 40%; } }
   .nl-enter-contests .player-main-block .nl-AL-position {
     top: -6.5%;
     left: 28%; }
   .nl-enter-contests .player-main-block .nl-FLEXR-position {
     top: 77%;
     right: 2%; }
-  .nl-enter-contests .player-main-block .nl-MM-position {
-    bottom: 56%;
-    left: 42%; }
+  @media (min-width: 1681px) {
+    .nl-enter-contests .player-main-block .nl-MM-position {
+      bottom: 58%;
+      right: 43%; } }
+  @media only screen and (min-width: 1441px) and (max-width: 1680px) {
+    .nl-enter-contests .player-main-block .nl-MM-position {
+      bottom: 58%;
+      right: 43%; } }
+  @media only screen and (min-width: 1201px) and (max-width: 1500px) {
+    .nl-enter-contests .player-main-block .nl-MM-position {
+      bottom: 58%;
+      right: 43%; } }
+  @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+    .nl-enter-contests .player-main-block .nl-MM-position {
+      bottom: 58%;
+      right: 41%; } }
+  @media only screen and (min-width: 992px) and (max-width: 1200px) {
+    .nl-enter-contests .player-main-block .nl-MM-position {
+      bottom: 58%;
+      right: 40%; } }
   .nl-enter-contests .player-main-block .nl-ML-position {
     top: 18%;
     left: 12%; }
@@ -13884,16 +13934,16 @@ td:nth-child(4).homepage-list-view {
 ---------------------------------------- */
 .matches {
   width: 100%;
-  height: 140px;
+  height: 137px;
   overflow-y: hidden;
   overflow-x: scroll;
-  margin: .25rem 0 1.5rem 0; }
+  margin: 0.25rem 0 1.5rem 0; }
   @media (max-width: 1200px) {
     .matches {
-      height: 156px; } }
+      height: 137px; } }
   @media only screen and (max-width: 575px) {
     .matches {
-      height: 140px; } }
+      height: 137px; } }
   .matches.rounded-corners {
     overflow-y: hidden;
     overflow-x: scroll !important; }
@@ -13933,11 +13983,12 @@ td:nth-child(4).homepage-list-view {
   .matches__leaders-list {
     list-style: none;
     margin: 0;
-    padding: 0;
-    font-size: 1em; }
+    padding: 0; }
     .matches__leaders-list li {
       line-height: 1.6em;
-      margin-bottom: 0.5rem; }
+      margin-bottom: 0.5rem;
+      font-weight: 500;
+      font-size: 1rem; }
       .matches__leaders-list li img {
         width: 28px; }
       .matches__leaders-list li span {
@@ -13945,16 +13996,10 @@ td:nth-child(4).homepage-list-view {
         padding: 0.125rem 0.25rem 0rem; }
       .matches__leaders-list li > span:last-child {
         float: right; }
-      .matches__leaders-list li:last-child span {
-        font-weight: 300;
-        float: left; }
       .matches__leaders-list li:after {
         content: "";
         display: table;
         clear: both; }
-  @media (min-width: 992px) {
-    .matches {
-      height: 158px; } }
   @media (max-width: 991px) {
     .matches {
       margin-bottom: 1.5rem; } }
@@ -13964,7 +14009,7 @@ td:nth-child(4).homepage-list-view {
 .current-contents {
   margin: .25rem 0 1.5rem 0; }
   .current-contents .nl-table-scroll2 {
-    max-height: 120px; }
+    max-height: 109px; }
   @media (max-width: 991px) {
     .current-contents {
       margin-bottom: 1.5rem; } }
@@ -13972,7 +14017,7 @@ td:nth-child(4).homepage-list-view {
 .table-current-contests .table th,
 .table-current-contests .table td {
   font-size: 11px;
-  padding: 0.5rem 0.5rem;
+  padding: 0.25rem 0.5rem;
   text-align: center;
   max-width: 120px;
   white-space: nowrap;
@@ -14062,6 +14107,18 @@ td:nth-child(4).homepage-list-view {
   .rank .leaders-list p {
     font-size: 11px; } }
 
+.nl-live-score .nl-my-teams .table th:nth-child(2) {
+  text-align: center; }
+
+.nl-live-score .rank__content.leaders-list {
+  padding: 1rem 0rem 0.375rem 0rem;
+  margin-left: 0px; }
+  .nl-live-score .rank__content.leaders-list p {
+    font-weight: 600; }
+
+.nl-live-score .top-bar-live-scores {
+  margin-bottom: 3rem; }
+
 @media only screen and (max-width: 575px) {
   .nl-live-score .rank__stats.part-of-block {
     max-width: 133px; } }
@@ -14070,7 +14127,7 @@ td:nth-child(4).homepage-list-view {
   background: green; }
 
 .nl-live-score .nl-team-field .nl-player-block p.played {
-  background: #6dcff6; }
+  background: #5fadcc; }
 
 .nl-live-score .nl-team-field .nl-player-block p.not-playing {
   background: red; }
@@ -14270,7 +14327,7 @@ td:nth-child(4).homepage-list-view {
     .rank__playlist-item .playing + span:before {
       background-color: green; }
     .rank__playlist-item .played + span:before {
-      background-color: orange; }
+      background-color: #5fadcc; }
     .rank__playlist-item .not-played + span:before {
       background-color: red; }
   .rank.mobile-only {
@@ -14322,14 +14379,14 @@ td:nth-child(4).homepage-list-view {
       display: block;
       width: 100%; } }
   .rank__stats.single-block .rank__content {
-    padding: .5rem 1rem 0.375rem 1rem; }
+    padding: 0.5rem 1rem 0.375rem 1rem; }
 
 .rank__stats.below-teams {
   line-height: 1rem;
   width: 100%;
   padding: 0 0.75rem; }
   .rank__stats.below-teams .rank__content {
-    padding: .5rem 1rem 0.375rem 1rem;
+    padding: 0.5rem 1rem 0.375rem 1rem;
     font-size: 13px; }
     .rank__stats.below-teams .rank__content p {
       font-size: 13px; }
@@ -14395,7 +14452,8 @@ td:nth-child(4).homepage-list-view {
     .nl-live-score-contest-table .rank__no span {
       font-size: 12px;
       line-height: 1.2;
-      padding: 0 .25rem; }
+      padding: 0 .25rem;
+      font-weight: 600; }
     .nl-live-score-contest-table .rank__no span + span {
       font-size: 18px;
       font-weight: 700; }
