--- a/markup/_layouts/_content/enter_contests_content.jade
+++ b/markup/_layouts/_content/enter_contests_content.jade
@@ -21,21 +21,21 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 					div.nl-team-name your team
 					div.nl-team-data
 						div.row
-							div.col-7 TOTAL FP:
+							div.col-7 TOTAL FP
 							div.col-5
-								span.avalibe 101.9 FP
+								span.orange 101.9
 						div.row
-							div.col-7 TOTAL SALARY:
+							div.col-7 SALARY CAP
+							div.col-5
+								span $65000
+						div.row
+							div.col-7 TOTAL SALARY
 							div.col-5
 								span $46730
 						div.row
-							div.col-7 Available:
+							div.col-7 Available
 							div.col-5
-								span.avalibe $25000
-						div.row
-							div.col-7 Projections:
-							div.col-5
-								span 154
+								span.orange $25000
 				div.nl-team-button
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
 					button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
