--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -2,17 +2,17 @@
 ---------------------------------------- */
 .matches {
 	width: 100%;
-	height: 140px;
+	height: 137px;
 	overflow-y: hidden;
 	overflow-x: scroll;
-	margin: .25rem 0 1.5rem 0;
+	margin: 0.25rem 0 1.5rem 0;
 
 	@include respond-to (allnotwide) {
-		height: 156px;
+		height: 137px;
 	}
 
 	@include respond-to (handhelds) {
-		height: 140px;
+		height: 137px;
 	}
 
 	&.rounded-corners {
@@ -65,41 +65,38 @@
 		list-style: none;
 		margin: 0;
 		padding: 0;
-    font-size: 1em;
 
-    li {
-      line-height: 1.6em;
-      margin-bottom: calculateRem(8px);
+	    li {
+	      line-height: 1.6em;
+	      margin-bottom: calculateRem(8px);
+	      font-weight: 500;
+	      font-size: 1rem;
 
-      img {
-      	width: 28px;
-      }
-      span {
-      	float: left;
-      	padding: calculateRem(2px) calculateRem(4px) calculateRem(0px);
-      }
+	      img {
+	      	width: 28px;
+	      }
+	      span {
+	      	float: left;
+	      	padding: calculateRem(2px) calculateRem(4px) calculateRem(0px);
+	      }
 
-      & >span:last-child {
-    		float: right;
-      }
+	      & >span:last-child {
+	    		float: right;
+	      }
 
-      &:last-child {
+	      &:last-child {
 
-      	span {
-      		font-weight: 300;
-      		float: left;
-      	}
-      }
-  		&:after {
-			  content: "";
-			  display: table;
-			  clear: both;
-  		}
-    }
-	}
-
-	@include respond-to(allwide) {
-		height: 158px;
+	      	// span {
+	      	// 	font-weight: 300;
+	      	// 	float: left;
+	      	// }
+	      }
+	  		&:after {
+				  content: "";
+				  display: table;
+				  clear: both;
+	  		}
+	    }
 	}
 	@include respond-to(allsmall) {
 		margin-bottom: calculateRem(24px);
@@ -129,7 +126,7 @@
 	margin: .25rem 0 1.5rem 0;
 
 	.nl-table-scroll2 {
-		max-height: 120px;
+		max-height: 109px;
 	}
 
 	@include respond-to(allsmall) {
@@ -143,16 +140,16 @@
 		th,
 		td {
 			font-size: 11px;
-			padding: 0.5rem 0.5rem;
+			padding: 0.25rem 0.5rem;
 			text-align: center;
 			max-width: 120px;
-		  white-space: nowrap;
-		  overflow: hidden;
-		  text-overflow: ellipsis;
+		  	white-space: nowrap;
+		  	overflow: hidden;
+		  	text-overflow: ellipsis;
 
  			&:nth-child(1) {
-        width: 35%;
-      }
+       			 width: 35%;
+      		}
       &:nth-child(2) {
         width: 35%;
       }
@@ -253,6 +250,22 @@
 // override to nl-create-team.scss
 .nl-live-score {
 
+	.nl-my-teams .table th:nth-child(2) {
+		text-align: center;
+	}
+
+	.rank__content.leaders-list {
+		padding: 1rem 0rem 0.375rem 0rem;
+		margin-left: 0px;
+		p {
+			font-weight: 600;
+		}
+	}
+
+	.top-bar-live-scores{
+		margin-bottom: 3rem;
+	}
+
 	@include respond-to(handhelds){
 
     	.rank__stats.part-of-block {
@@ -264,7 +277,7 @@
 		background: green;
 	}
 	.nl-team-field .nl-player-block p.played {
-		background: #6dcff6;
+		background: #5fadcc;
 	}
 	.nl-team-field .nl-player-block p.not-playing {
 		background: red;
@@ -518,7 +531,7 @@
 	  }
 	  .played + span {
 			&:before {
-				background-color: orange;
+				background-color: #5fadcc;
 	  	}
 	  }
 	  .not-played + span {
@@ -600,7 +613,7 @@
 		text-align: center;
 
 		.rank__content {
-			padding: .5rem 1rem 0.375rem 1rem;
+			padding: 0.5rem 1rem 0.375rem 1rem;
 		}
 	}
 
@@ -610,7 +623,7 @@
 		padding: 0 0.75rem;
 
 		.rank__content {
-			padding: .5rem 1rem 0.375rem 1rem;
+			padding: 0.5rem 1rem 0.375rem 1rem;
 			font-size: 13px;
 
 			p {
@@ -619,6 +632,8 @@
 		}
 	}
 }
+
+
 
 /* Chat
 ---------------------------------------- */
@@ -712,6 +727,7 @@
 			font-size: 12px;
 			line-height: 1.2;
 			padding: 0 .25rem;
+			font-weight: 600;
 		}
 
 		span + span {
